<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RemoteControlActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/block_layer">
        <TextView android:text="@string/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/min_freq"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <SeekBar android:id="@+id/freq_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="990"
                android:progress="90"
                style="@style/slider"/>
            <TextView android:text="@string/max_freq"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button android:text="@string/minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="minusOneHertz"/>
            <Button android:text="@string/minus_point_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="minusPointOneHertz"/>

            <TextView android:id="@+id/text_frequency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_frequency"
                style="@style/gauge_text"/>

            <Button android:text="@string/plus_point_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="plusPointOneHertz"/>
            <Button android:text="@string/plus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="plusOneHertz"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/block_layer">
        <TextView android:text="@string/duty_cycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:text="@string/min_duty_cycle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <SeekBar android:id="@+id/duty_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="98"
                android:progress="49"
                style="@style/slider"/>
            <TextView android:text="@string/max_duty_cycle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button android:text="@string/minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="minusOnePercent"/>

            <TextView android:id="@+id/text_duty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_duty"
                style="@style/gauge_text"/>

            <Button android:text="@string/plus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="plusOnePercent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
